@@ -53,7 +53,7 @@ class WeblinksViewCategory extends JView
 
 		if($parent == false)
 		{
-			//TODO Raise error for missing parent category here
+			return JError::raiseWarning(404, JText::_('JGLOBAL_CATEGORY_NOT_FOUND'));
 		}
 
 		// Check whether category access level allows access.
