@@ -5,6 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 COM_NEWSFEEDS_DEFAULT_PAGE_TITLE="News Feeds"
+COM_NEWSFEEDS_ERROR_FEED_NOT_FOUND="Error. Feed not found."
 COM_NEWSFEEDS_ERRORS_FEED_NOT_RETRIEVED="Error. Feed could not be retrieved."
 COM_NEWSFEEDS_FEED_LINK="Feed Link"
 COM_NEWSFEEDS_FEED_NAME="Feed Name"
